<resources>
    <string name="app_name">EDUCAPP</string>
    <string name="login">Login</string>
    <string name="register">Registrate</string>
    <string name="titulo_add_asignatura">Añadir Asignatura</string>
    <string name="nombre_de_la_asignatura">Nombre de la asignatura</string>
    <string name="creditos_asig">Creditos</string>
    <string name="aula_asig">Aula</string>
    <string name="horario_asig">Horario</string>
    <string name="profesor_asig">Profesor</string>
    <string name="descripcion">Descripcion</string>
    <string name="guardar">GUARDAR</string>
    <string name="a_adir_cursos">Añadir Cursos</string>
    <string name="nombre_del_curso">Nombre del Curso</string>
    <string name="fecha_de_inicio">Fecha de Inicio</string>
    <string name="fecha_de_fin">Fecha de Fin</string>
    <string name="a_adir_examen">Añadir Examen</string>
    <string name="nombre_del_examen">Nombre del examen</string>
    <string name="hora">Hora</string>
    <string name="a_adir_tarea">Añadir Tarea</string>
    <string name="nombre_de_la_tarea">Nombre de la tarea</string>
    <string name="fecha">Fecha</string>
    <string name="asignatura">Asignatura</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="asignaturas">Asignaturas</string>
    <string name="curso_academico">Curso Academico</string>
    <string name="cursos_academicos">Cursos Academicos</string>
    <string name="examen">Examen</string>
    <string name="nota">Nota</string>
    <string name="examenes">Examenes</string>
    <string name="examenes_hoy">Examenes Hoy</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="registarte_preg">¿Registarte?</string>
    <string name="perfil">Perfil</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="n_mero_de_tel_fono">Número de teléfono</string>
    <string name="actualizar_perfil">Actualizar Perfil</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="tareas">Tareas</string>
    <string name="hoy">Hoy</string>
    <string name="logout">Logout</string>
    <string name="registrado_logueate">Registrado? Logueate</string>
    <string name="realizado">Realizado</string>
</resources>