<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffedb"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imagReg"
        android:layout_width="119dp"
        android:layout_height="113dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/etNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:startIconDrawable="@drawable/baseline_person_24"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/etCorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagReg">

        <EditText
            android:id="@+id/nombreTexto"
            android:inputType="textPersonName|textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCorreo"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/etApellidos"
        app:startIconDrawable="@drawable/materialsymbolsmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombre">
        <EditText
            android:id="@+id/correoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#ffffff"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:layout_constraintBottom_toTopOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCorreo">

        <EditText
            android:id="@+id/apellidosTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#ffffff"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etApellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etNum">

        <EditText
            android:id="@+id/passTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/contrasena" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="#ffffff"
        app:startIconDrawable="@drawable/materialsymbolssmartphone"
        app:layout_constraintBottom_toTopOf="@id/btLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword">

        <EditText
            android:id="@+id/numTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/n_mero_de_tel_fono" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btRegister"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#149c68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btLogin"/>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registrado_logueate"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#149c68"
        app:layout_constraintStart_toEndOf="@id/btRegister"
        app:layout_constraintTop_toBottomOf="@id/etNum"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>