<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD"
    tools:context=".AddAsignatura">

    <RelativeLayout
        android:id="@+id/encabezado"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#9CCC65"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/twNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_add_asignatura"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-black"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/encabezado"
        app:layout_constraintBottom_toTopOf="@id/etCreditos">

        <EditText
            android:id="@+id/nombreTexto"
            android:inputType="textPersonName|textCapWords"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:maxLength="30"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de_la_asignatura" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCreditos"
        android:layout_width="0dp"
        android:background="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/etAula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombre"
        app:layout_constraintBottom_toTopOf="@id/etHorario">

        <EditText
            android:id="@+id/textoCreditos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="16sp"
            android:hint="@string/creditos_asig" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etAula"
        android:layout_width="0dp"
        android:background="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etCreditos"
        app:layout_constraintTop_toBottomOf="@id/etNombre"
        app:layout_constraintBottom_toTopOf="@id/etHorario">

        <EditText
            android:id="@+id/textoAula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="16sp"
            android:maxLength="10"
            android:hint="@string/aula_asig" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etHorario"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCreditos"
        app:layout_constraintBottom_toTopOf="@id/etProfesor">

        <EditText
            android:id="@+id/textoHorario"
            android:inputType="text"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:maxLength="40"
            android:layout_height="wrap_content"
            android:hint="@string/horario_asig" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etProfesor"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etHorario"
        app:layout_constraintBottom_toTopOf="@id/etCurso">

        <EditText
            android:id="@+id/textProfe"
            android:inputType="textPersonName|textCapWords"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:maxLength="20"
            android:layout_height="wrap_content"
            android:hint="@string/profesor_asig" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCurso"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProfesor"
        app:layout_constraintBottom_toTopOf="@id/etDescripcion">

        <Spinner
            android:id="@+id/spinneCursos"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCurso"
        app:layout_constraintBottom_toTopOf="@id/btGuarda">

        <EditText
            android:id="@+id/textoDescripcion"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top|start"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/btGuarda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescripcion"
        android:backgroundTint="#00C853"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>