<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD"
    tools:context=".CursoIndividual">

    <RelativeLayout
        android:id="@+id/encabezado"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#9CCC65"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/twNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curso_academico"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="sans-serif-black"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:background="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/encabezado"
        app:layout_constraintBottom_toTopOf="@id/etFechaInicio">

        <EditText
            android:id="@+id/nombreTexto"
            android:inputType="textPersonName|textCapWords"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/nombre_del_curso" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etFechaInicio"
        android:layout_width="0dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/btFechaInicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombre"
        app:layout_constraintBottom_toTopOf="@id/etFechaFin">

        <EditText
            android:id="@+id/textoFechaInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/fecha_de_inicio" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btFechaInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/calendar"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/etNombre"
        app:layout_constraintStart_toEndOf="@id/etFechaInicio"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/btFechaFin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etFechaFin"
        android:layout_width="0dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/btFechaFin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFechaInicio"
        app:layout_constraintBottom_toTopOf="@id/etDescripcion">
        <EditText
            android:id="@+id/textoFechaFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/fecha_de_fin" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btFechaFin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/calendar"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btFechaInicio"
        app:layout_constraintStart_toEndOf="@id/etFechaFin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/etDescripcion"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFechaFin"
        app:layout_constraintBottom_toTopOf="@id/btEditar">

        <EditText
            android:id="@+id/textoDescripcion"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:gravity="top|start"
            android:layout_height="150dp"
            android:hint="@string/descripcion"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btEliminar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescripcion"
        android:backgroundTint="#00B8D4"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/btEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        app:layout_constraintStart_toEndOf="@id/btEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescripcion"
        android:backgroundTint="#F12C2C"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>